--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "start": "json-server --watch db.json"
   },
   "private": true,
   "dependencies": {
@@ -18,6 +19,9 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "json": "^11.0.0",
+    "json-server": "^0.17.3",
+    "jsonserver": "^0.1.6",
     "material-icons": "^1.13.8",
     "materialize-css": "^1.0.0",
     "rxjs": "~7.5.0",
