--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build --prod --base-href=/catdrink-app/",
+    "ghpages": "angular-cli-ghpages --dir=dist/catalago-drinks",
+    "deploy": "npm run build & npm run ghpages",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "start": "json-server --watch db.json"
+    "json:server": "json-server --watch db.json",
+    "json:server:routes": "json-server --watch db.json --routes routes.json"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +27,8 @@
     "jsonserver": "^0.1.6",
     "material-icons": "^1.13.8",
     "materialize-css": "^1.0.0",
+    "ngx-webstorage": "^12.0.0",
+    "ngx-webstorage-service": "^5.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
